--- a/src/app/availability/availability.component.html
+++ b/src/app/availability/availability.component.html
@@ -1,4 +1,8 @@
-<section id="availability">
+<section id="availability" class="container">
   <h2>Availability</h2>
+  <p>Open dates will be blank.  Leased dates are visible.<br>Use the arrows below to see future dates.</p>
+  <div id="calendar-bg">
+    <iframe src="https://calendar.google.com/calendar/embed?src=882jpkmmrktiplvqr9p38h3k6c%40group.calendar.google.com&ctz=America%2FNew_York" frameborder="0" scrolling="no"></iframe>
+  </div>
 </section>
 
