updated splash and footer spacing

--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -13,13 +13,13 @@
       <ul>
         <li>$ 800.00</li>
       </ul>
-      <p>This is for a single room.  There may be another person already present in the other room, but you will need to meet them and you must
+      <p>This is for a single room. There may be another person already present in the other room, but you will need to meet them and you must
         both agree to live together before you are approved. If the house is empty, then you get the approval authority for anyone new.</p>
     </div>
   </div>
   <div class="item">
     <h3>Description</h3>
-    <p>This is a smallish house, but it is right downtown, walking/biking distance to all of downtown Savannah.  The house is furnished, except for the bedrooms, so all you need is a bed (full-size max) and maybe a dresser and desk. Furnishings include dishes, living room furniture, breakfast table, and 40 inch tv.  If you need a lot of space in your bedroom, this is not the place for you, but the location and convenience outweigh any negatives.  The internet, water and trash are paid for.  The electric is alloted up to $100 a month.  Anything over that will be split amongst the tenants or tenant.  There is no cable, but you can get all local channels with the antenna.</p>
+    <p>This is a smallish house, but it is right downtown, walking/biking distance to all of Savannah and especially all SCAD locations. The house is furnished, except for the bedrooms, so all you need is a bed (full-size max) and maybe a dresser and desk. Furnishings include dishes, living room furniture, breakfast table, and 40 inch smart tv. If you need a lot of space in your bedroom, this is not the place for you, but the location and convenience outweigh any negatives. The internet, water and trash are paid for. The electric is alloted up to $70 a month. Anything over that will be split amongst the tenants or tenant. There is no cable, but you can get all local channels with the antenna and use you favorite apps on the smart tv or, even hook up your own media/gaming system.</p>
   </div>
 </section>
 
