--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<app-splash>Loading...</app-splash>
-<app-prices>Loading...</app-prices>
-<app-pics>Loading...</app-pics>
-
-<app-availability>Loading...</app-availability>
-<app-contact>Loading...</app-contact>
+<!--routed pages and universal footer-->
+<router-outlet></router-outlet>
 <app-footer>Loading...</app-footer>
