--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -8,7 +8,7 @@
     <div><a id="rec-icon" href="#availability"><img src="../../assets/svgs/availability-icon.svg" alt="prices icon"><span>Availability</span></a></div>
   </nav>
   <h1>Cottage on Blair</h1>
-  <div id="pay-online"><a href="#pay-online">Online Payments</a></div>
+  <div id="pay-online"><a href="/pay">Online Payments</a></div>
 
   <a href="#prices"><div id="scroller"></div></a>
 </section>
