--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -1,7 +1,7 @@
 <title>Make Payment - Cottage on Blair</title>
 <section id="pay-online">
   <h1>Make Payment</h1>
-  <div class="container gray-bg">
+  <div id="pay-bg" class="container gray-bg">
     <form id="pay-form"
         [formGroup]="payForm"
         (ngSubmit)="onSubmit(payForm.value)"
@@ -35,9 +35,16 @@
           </div>
           <p>Is everything filled out correctly?</p>
           <button type="submit" id="pay-submit" ><strong>Go to Billing Info</strong></button>
-
-          <app-stripe *ngIf="billingReady" [label]="label" [amount]="amount">Loading...</app-stripe>
       </form>
+      <div id="stripe-container">
+        <h2>Use this new pay feature in your browser</h2>
+        <app-stripe  [label]="label" [amount]="amount">Loading...</app-stripe>
+        <h2>If that doesn't suit you, go directly to PayPal or VenMo</h2>
+        <div></div>
+        <h2>Still can't find what you need?</h2>
+        <p>You can mail a check.  Please use the contact form for further information.</p>
+        <a href="/home#contact"><button>Contact</button></a>
+      </div>
 
 
   </div>
