--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -97,7 +97,8 @@ p{
   color: #fff;
 }
 #stripe-container{
-  width: 50px;
+  width: 100px;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 767px){
