--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -77,6 +77,7 @@ p{
   background-color: #86af72;
   top: 0px;
   left: 0px;
+
 }
 #billing-container p{
   color: #fff;
@@ -96,9 +97,16 @@ p{
   background-color: #99badd;
   color: #fff;
 }
-#stripe-container{
+#stripe-button{
   width: 100px;
   margin: 0 auto;
+}
+.payment-types{
+  min-height: 30%;
+  padding-top: 40px;
+}
+#paypal-venmo{
+  background-color: lightgray;
 }
 
 @media screen and (max-width: 767px){
