--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -37,19 +37,203 @@
           <button type="submit" id="pay-submit" ><strong>Go to Billing Info</strong></button>
       </form>
       <div id="billing-container" *ngIf="billingReady">
+        <div class="payment-types">
+          <h2>Use Google Pay or Apple Pay in your browser</h2>
+          <p>This may have limited support on your browser or phone as it is a new feature not supported by all browsers, as of yet.</p>
+          <div id="stripe-button"><app-stripe  [label]="label" [amount]="amount">Loading...</app-stripe></div>
+        </div>
 
-        <h2>Use Google Pay or Apple Pay in your browser</h2>
-        <div id="stripe-container"><app-stripe  [label]="label" [amount]="amount">Loading...</app-stripe></div>
+         <div id="paypal-venmo" class="payment-types">
+          <h2>If that doesn't suit you, go directly to PayPal or VenMo</h2>
+          <a href="https://www.paypal.me/LarryHastings" target="_blank"><div id="paypal">
+              <!-- Generator: Adobe Illustrator 16.0.4, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+              <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+              <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                 width="185px" height="60px" viewBox="0 0 185 60" enable-background="new 0 0 185 60" xml:space="preserve">
+              <image overflow="visible" width="185" height="60" xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAALkAAAA8CAIAAAC1soxgAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJ
+              bWFnZVJlYWR5ccllPAAAAyhpVFh0WE1MOmNvbS5hZG9iZS54bXAAAAAAADw/eHBhY2tldCBiZWdp
+              bj0i77u/IiBpZD0iVzVNME1wQ2VoaUh6cmVTek5UY3prYzlkIj8+IDx4OnhtcG1ldGEgeG1sbnM6
+              eD0iYWRvYmU6bnM6bWV0YS8iIHg6eG1wdGs9IkFkb2JlIFhNUCBDb3JlIDUuNi1jMDY3IDc5LjE1
+              Nzc0NywgMjAxNS8wMy8zMC0yMzo0MDo0MiAgICAgICAgIj4gPHJkZjpSREYgeG1sbnM6cmRmPSJo
+              dHRwOi8vd3d3LnczLm9yZy8xOTk5LzAyLzIyLXJkZi1zeW50YXgtbnMjIj4gPHJkZjpEZXNjcmlw
+              dGlvbiByZGY6YWJvdXQ9IiIgeG1sbnM6eG1wPSJodHRwOi8vbnMuYWRvYmUuY29tL3hhcC8xLjAv
+              IiB4bWxuczp4bXBNTT0iaHR0cDovL25zLmFkb2JlLmNvbS94YXAvMS4wL21tLyIgeG1sbnM6c3RS
+              ZWY9Imh0dHA6Ly9ucy5hZG9iZS5jb20veGFwLzEuMC9zVHlwZS9SZXNvdXJjZVJlZiMiIHhtcDpD
+              cmVhdG9yVG9vbD0iQWRvYmUgUGhvdG9zaG9wIENDIDIwMTUgKE1hY2ludG9zaCkiIHhtcE1NOklu
+              c3RhbmNlSUQ9InhtcC5paWQ6RjgyMTcyNDg3MzU5MTFFNkJCOUVDRjYyNEEwOEY2NDQiIHhtcE1N
+              OkRvY3VtZW50SUQ9InhtcC5kaWQ6RjgyMTcyNDk3MzU5MTFFNkJCOUVDRjYyNEEwOEY2NDQiPiA8
+              eG1wTU06RGVyaXZlZEZyb20gc3RSZWY6aW5zdGFuY2VJRD0ieG1wLmlpZDpGODIxNzI0NjczNTkx
+              MUU2QkI5RUNGNjI0QTA4RjY0NCIgc3RSZWY6ZG9jdW1lbnRJRD0ieG1wLmRpZDpGODIxNzI0Nzcz
+              NTkxMUU2QkI5RUNGNjI0QTA4RjY0NCIvPiA8L3JkZjpEZXNjcmlwdGlvbj4gPC9yZGY6UkRGPiA8
+              L3g6eG1wbWV0YT4gPD94cGFja2V0IGVuZD0iciI/PtnelyMAACI8SURBVHjarF0JmF1lef7/c7eZ
+              O/u+ZmaykZAFkkCWJlACSESWp1ZtsdRqVdzqI1gR66OgFbeiVnwsKFUrUgsookJBxKIQQSMSCGSZ
+              ZEIymSyTzL7cmTt37tzl//qf/V/PuVN7nzx57px7zr9+2/t93/+dKLrnVVRZh4pFRD9A/4H4Bdlf
+              vD/t72DdQxBg+25EEMLW//ad9m3A/+l+M29DfBf+/9514l50r/s/AdcgeP1if7SYIGKYjZhfMMJF
+              RCIIF8zv9EPAvNccCT88ws/XmaZ9jbg3eLPgV8YblTxakJbFXisE3NyFtRJatoct3uDOGrxVJdYV
+              71flnnqb6E0TOy1gcDqy19PukV4s5KIIY/cx7LeOeEJBwhd3Bb0/EXjbhAz3V+wuCtcCeLNzf2Lm
+              j/nlw/bsMdM78eeGvX3DyPCuM8OjlIHtX8EiF2L+ia1+MTA9ul+40bpDw4hbEIz87THYB5G/Jph/
+              1t4kj5TB3aeIteDmRFwyZQfDLJi/u4YwWrczsL5ErMbtdmwiwO76EPBH6I8K+9Nx/gRvRS0p4Dxv
+              LiAyDJEI2A9GIR8IuAiaZ7DiYQhs0+c2ommTcM+D1IrJHIazEAZ/eynzYv/EoFoXrBozqJsC3cKC
+              ZtYQNkrg/sfu99Dt87lU8wth2Bs5hKq5VRSJnkZgxKzNo+AuAxYoABQzFyhDUCjCLAGrScfsFzs3
+              2Dzh866wi2CxBXEGQ1yWYmkMeFEv0LGCvIFnMUaYO91i7k4QpKMnxaXWEGjoAbR0xSkv5AgJLfEB
+              M1qeXIAX6sgWM34jhv8DIFEpBpAy5nWKt6MgGTfqdkC1FaEii2/BM2u8uYhk6g6GeHLe+mLY9A1h
+              QwBOSIBEuzLHQymcDD4Rc3+GtQDBYkb5k0AZShEosIXhWirWctFFdfS7t76gp+ggPeIuny2ZRRkA
+              4QsHOjpwuR6gtDaJb8r4IwyUwoAXoVjFeauUtYJ0QH2z2hCUyWJRBoGyWazoAZdIleJfhl51gVZ5
+              A8cbPMUohaRO9fKGOisksMzERKUcsSjzgZU6HsW4ZhknTvhlBZX6B36CXiPh26bSxaxqwII4ISUI
+              YKWpQaRfSmBRtY3IIiPMYyiMnEUErNWXnMYFyf4gzJYTadF1siRAJOKS5C3GLpWTMAPakjf2ThCV
+              +oBA446lFwwK48axlvQ6l4O1Ls05xoq3HziEMoDxJiiEMds71qtsDwmr9pozxrGCJQAMHu39Hz44
+              HDuUSu8gQRsV29lrjYhP4uCqP8Cio8ImEQNEwETCbEnld4XaAoQDRTjw+6e2/ReDgLAa0+tVebAp
+              JiksAVUxfGKEQ1YFFpV8MIAlEPenGCsQCCMJJ06c/SOubGMWFZg+CA5SHyE98vsq7oEsTVXylciQ
+              hx1nINIJIEZAgeKcl0MYawCzq6w9oEMYHiPYdhsaakLRkbbDytjy4DGimAdXCmMFgAdmtkOJnWRR
+              coqE2gTEB+2IsU58cWqY85RXk6AwBQQi7wpWLQakYhytpeJbS8ih6eA9Bpn1VZrOx7AMHfvd4UC6
+              w3zLrLEiOclMLzM2FoNcQDE9vEhFw8EBpR8ltAUjSDZwthDxrdqSDH4IEnusQbAIjY0D5q9pCvNP
+              6VQJlKgRtMYtDhswq0AxGEHGihg4AGZHiWjroRIVEO/LERaIRcs6XseMPeiPB/PrZbgqifikhUH8
+              UuLyevYpKz4BBXmSuBgQ8GhRRTFCXxjCbW1uX7HWIQ6SwxBQ4MZhz1/JCBXfFyfFHQSMDvLUPBcc
+              KwNDoSMSVb7OfSKjZZ0LjrVvAHPmAsG8C1JyxODAMXC4D6sWF0rjacy590Fl00Cou1YCj8AGcUEP
+              L0qD0Aj7XgbHBQeCcWgsxnWGpe2EEEmO9GJctjw4a4Jo2jQkSWkEDQYprOEwBIQlDzryg5rcYIKd
+              rbwLHwMzyMDVXpwLTgNjQY7u4VJRhsIPFKD7tdwGnFmHpEAxlIAy5HCuLfS4mJEGLXMmNtuO60EB
+              z3S3pmYQrQJCvIcI6ZGqTIeg0nuiAlLuPa/KIRQtg9arKd4sBaRAyT6gwEcsGxMmaka4GRp6BSSs
+              DnYxKZsMEOiaAQiTWd7VSEk+bIEyhO/gik1kZasYRXd2vEOZqNzTsvNeHSjGKm2oSqlR7I3hjkSy
+              agM0OOjJV2sLq+gDmGwNpQsO8bxkSBkzRPbxKwA68JobhZB8+IeI/hif4WTlofTRycoRVEqdSCA5
+              TAWEZlloUy0CjLYSHkclaSd+U0p5CkT1qu4Si24CEHiM9cWBzvONxW4waDyYSJMFp4EMcsadHy/E
+              oWvFJCEwTl42rkEMJocIdEQbxtlMQhYXuw5zT4MqXigks8EiiYWzk7AqYAK+wPNlUoBrESQXnAV5
+              DLWyMDTmj85hyic6oEVG0UQb2V7CIm8uYK1Pj90GL3+FI1MrJ4wYPvAjPNkRrPJ4BkpvDeovTZry
+              FOanvqlsz0XERkCE0CwfyjascIULjMj7iP3BEk52REtzwaEQh1LojUHC3/gTolGqkZgJtkwmIoaw
+              SKRSrPI3F4nLqeBHnbAUkFG7VgN1EGeZMnqzQFw7nVk6bHnMsWDJ4iDdCVZesN1IRHMn8NFNzQ5G
+              Q4ws4B1f2AvYStnUwVAiyBD2WuOtE+D/9AwC0BgrGJjYEPYlJglzLkOgbWG3X10WMzB2BRsdywKl
+              nvmC+a9QRIkor3NBhEvUsMVE7VkRoK+7npGasvKIwSwsXigW87S7bM4ko3hEQmKg8MZZX5J1STr4
+              fJFkZuYVqYNO+4YLObHvkeLawVGFhSFn8GMXSnmuVVyaJFDE0HnfnSIfBcJ8PCxNePDODVTZWezg
+              JsaynlbCm2KlxAvpxPPFnq6aP3xsRzxiMKPERQIz2cKJ8bkvPXV09ytn3c1TJQAFpEgiVWSqQJpa
+              qvZ+6U1VZVF284qEzGQKJ0ZmvvTTA7tfPIkSkaBQlP2Zz2++eMlTn3tTBOOpTO7ijzw6NTKDohHe
+              mUQYFxxxRksEPYs9HRSsOIS0dKy2pqE02wUrV5MEeXpYEwcUWQXaqAI7YVLC2NT2L7TXlrVWJeRf
+              mirjyxuTl65o2PLl3Qf7xlBcCq4By53gqxjAmgQrh1aWtlZ1N1QoeqxCy1sqd6xu3vyJJw4fGUYx
+              3tfAueXAVp3ruusbq8ro11QmR8nFysbnAxdKfYRBTqU1FF5IhYOVORthKwsoIQInu+DEO4suzxkS
+              PGaEgCdFAEsBHZVTi9guOFsNQYjBBMosOMYcAeiuLfdu7x1J/7Z/8mwq610pixrv3tFlGTSCh0aH
+              XbFaCXqijpDzW6q8Hw+fTT3fNzo0Pe9dScaj779qlWXQSIljbH6gteAr2mvsC/3Dsyi94NMKh72x
+              K6Oxwqfl9hDVYl0WytoRL0y0/hUnM84iRjP52dDGMBV5cSoFxJluoAnce2DHMJ1viDnoVKRjcI8F
+              2T46wofp1eYCksSeef/K5kr7b2qjXP2tFwf7J6N15c/c8mc7VzTa13vqkmZ3tkGayzvyLGqY65Cz
+              UB5dOioDCEGFgrNWpkhglo+SWt4yZq121i6pdXoskGvuevZU32hlU8VTd+y6dHWzfb29IeksMn2K
+              dkEsTxnVg0YE5QrOItMuIsbaLqepE0PTKFtAFQbDEqxMIoqTSpw8hmiI7wgBv50MEGDvLpr9tzaW
+              raqOH5lZGB3LmkP3rZwABIT8HCVQhodk1xwWrSXMJKRQ4qC7UJlA2SI1NZzh0+GVR83NS+c0oUqV
+              DMAO9NjQ4XD56OzC4OQ83YPCSHr30QmPVqbpHpimLqlsqXzDeV09DUl65zN9o2PDs2vOa4xHIvli
+              offUdKIytqa5EgAoBRw5PYUKrrQukGR9clWTSZGz2fzx/nFvg8dmsqfH5ygRpKl06R3xaGVuPm9S
+              CSF1bdWXr2/vbqwYTWWf2X92dCi19vzWRATninDoxDiqiJ/X7jR1aGBKddRDHfoS0LInV7A+jwEU
+              KftISmsqomh17PGru7a2JUmBlMUjvx1MX//YAGVD/wAckvhVgdPCrFovTmQPw5Y3wFvseVi7rOZ/
+              3rNhw717x87NUMYyO8kV7/ubdXXlsRvu22tyGyCNDxo4BrG/lEVXNDly5dRkFs0smGQRM7YtrfMe
+              3nd6mj5w+40bPnLFsmbXspnM5H667+y7tnXHowYBaLnlv6/d0PGD91xsb8Sm25/e3ztkAigqipLx
+              F+7Ytanb3NTnj45edsfTXa6xcnJ8DqYy5gOJ6EUrGrweXz4+QUf4z+/b8Q/XrG6qLrMvTsxmH33x
+              5LsvXxmPRqjpvfymh0dnsh1UAlmfg6cnHeEnpg1YCggswxZEvcN+dJhZ5Q3EKl60+nr62p7mZGTD
+              g68PTufWNZd9cnOzaehlLWGYd11tFNwbboCGLhCFmvb2x6x2c+YG+On7VK5GLYMjS8wvBUtyxCzl
+              Qh8kFjSLIeeUKG18gUoU63oBVtSVJ6PG2OyCpYYsYRQ1tnfX/vr4JMUFZgvEejbqKggPwlBOpXSQ
+              iPg+a1Isqy3vqIk78iOT62ytrE5E/3pb167zm1xLFP57/9D3bt7+3h3d7MrWJ+Pvu2Sp8+B8fjyT
+              23Ns1CZtOq4r1rTsP3DOHHy28I0PbrMJhZLUxx54mZJFW51jIY1Nz3e111RVxP5m58o3XtBuX8wV
+              yc9eOvWDz77xXTtXsD02VJV94KrV9vd0Nn8ulVnRWlOVdAc/mzU5ByR8XpKnGIXhINYFJEYTmNhS
+              VezKzopbXhga7J9BlbFDp9PvGEybw6I/lUfeuq6hpyY+Ppd/4NgUSuVNiimQVZ2Vl3ZU1pZFRtP5
+              h49NUrH8ps6qJ16fNAmLbm/cuG5Nw5OnU2gmd/naht7J7PrGMrrlvzkwhuoTN65ubauOD6VyD/WO
+              otm8penIn61p2NpRTYA83TveWBHrn8qiTN4ZtjnCRFdt2f6zs7s2d67vqp2ey92/f4iMZ7atbSYE
+              Xnp93KSqAqHY+MLWqsf3D5lEY0PuIqyoT9aWx+y5Xr2m+dgXdyWiBrsQtz92eFljhUcov++f/PWB
+              oflc8fL1LW9c02JfPD0xT8n02PGJZ4+MXXm+qUeuv6jj7p8fpBffdvXqj7xhlX3bzQ+88sqLpy/c
+              0lXvbvB1F3Ve8+9vo3KC7fHTD+5b21nrEcrv+kaee2VwPlfYualz14Ud9sWp9EI+lV1zUZf94EK+
+              OD2bc09qupiYy7zEgUjWJKyoOluQzYLzXHCgcsHRa3P5587N3bWjNWHgr+0fg+kF2y1R15B44a/O
+              o9z77EDqpvWNn9jSuvaBXjS98Ikru754afvu07NHJ+bfsaahsSI6OV+496ruiq++ZHaRL17QWfPE
+              DatX3vfa8Uz+x3+1KrVA5nLFR18bOT45/8J7L6B/7hmY+vi2jvdvbtt536vUtv/sW1bdsbP7scNj
+              cwvFW3Z0js0V9g/NmhowEbXNxuW1ZeVR49adPZNz+cPnZnZt6/zYzp61X3r+7Zva3rK+uevTvzGF
+              TQT/6kNb/nhy6vEXz5iSzGaMIlnbXGm4FjElEpZO5vLFzz3R99WfHNz9+TfYV357bGLn539twg2C
+              7noq0XfXtataTf01OJmhZiqd2g9eGLBp5ZKVjc0UiEfw/e/fajf53d3H733kNconG7trPRM8FuFw
+              +NxC4TM/evXrD76855632Vd29w5f/vHHEBWiCL78s+Tr33n7yrZqUwPSK5n8hUsb3Qfz4+ms+iQ2
+              SKlCBJSO06gm9RcrYJ4yhEGnVSRXPD7wwys7vrKj9XPbmj/87Nn7947SdX3yL5aPZvJX/LAPTS2g
+              xrLxWy782/PqHuqfpoTyjicHfrx32NyhZJSaot++eunBsQzKFE2pQ2BtY3mmQChlVFcnGstjDx08
+              99GfHKUbf+K2rb87lbrx/gNoNvcPy2ryn9z+5ytqR9K5f9zeseM7+/54YJQqoJ0Xtz5308aHXx22
+              FLDjY1haVx6PGE8eHvvUI70om69aUj3+mZ0fvXL5w/uGPrR9SU1DMjUwddN1qzurE+t/csgJzLks
+              sabVh6/7BmdGqfVgGFSn7Dkx+cSBoZNHx5p66rZ2O7bLv/36OMrkUEXCfHwud2oibdPKhEk9QJXd
+              E6+enc7ka5MxSgTvvGTZZec3VZoEjU6MpT/4/b2mFs6R9a5ha/Z4cnJ0Ys7skaqw18ee3Ht6oHeo
+              fWXTpqX19g1fe+wg7QjVlJntz+UoUdq0MkSps0g2LHdMnLPjc7MzWeSLJ4MJYWLnvDcwCUAq0RLV
+              x4Ck0yI6pyodwWz+734+cGvj0G2bmr9/1ZLBdP5MOre9NfnpPUNvWlYTjRnFAknlSWtF7I6LW58a
+              SP34pSGP6SlgOb8p+dpoxjRKoiaSXNWcHE7naZurOirpCnzlxXNURb95c9vSmvi/PJ+69oLmSNQw
+              TJOGdNYk3rmx5YF9w398bQRVxOhUdx8ZPzYxf3Q07WZgmPu9sbXydCr7qcf7TPOlKj57Lv3sscmd
+              y2q/sfvEQp5c1Fb17HjmrutX/tOTr+eG06gsxuTV4A2d1Q4ISi9c9K8voOFZZLve6ciozIxHO6vL
+              ymKOxWPShL0F2XxZS9VGl4ZGprO2fZoamf1V7/ANm5fQi19427pE1Hnw67/oI3TM5hQiy9vcHmey
+              W2//ZWHY9rQS26amjTTVlifcHqeotLCdXpl8VUfNehds951J0TuXtTpN9Q1OmyRlTg0417lXCcAg
+              2nA347cFtacZkOSu5cPc7BEKk2Dx6Nj8bb88dW131VtX1jw3mKaLc+Oquneuqbc9ebPzxb0jmdu2
+              tPzuzKzjsLGHXR5dVRv/ae+E51Zf31jeN56huvzixoqRudw5ClMjxtYlVRRq3ryt3aITkwQOj85T
+              2XPbJUu+uWfQ0hrWkBIRKpOOTc07PGQNf/OS6gNDadPWNkGQqW4oZx8dS6Op+b6xzOXL6ze0VU/P
+              F+75Tb9JwV5ciRAKgrpdHHFmygJBru3iLESuODWfp6AjYimSW3at+G3fKKQWqpoqfvi+LVRoeHDG
+              jUHCz/eesWnFI5Rnj4ze+2QvSsZMeiqLdTc6sOvY0Gxhet6UUhj5cp0U00yPt755/d7DI/np+Ya2
+              qgdu3dnoYqLDg1OoprzVtZEPU9IpytRgKBKd9EHeqN7Z6mIBTHyXMEiBZcPyFdJtcCEOtcOGM4V0
+              zqTYdQ8eQdOWPUsHSv/Pk1svbu6qjls4CDujr040JGNUWzlgpyK+s6v6HqqhCGxsTw6kFkwohClX
+              FFMLhXXfeAktEMsUpQqLrnUxZuAGun+0u4gZzHvr5q7Wylj/9IKDD006NrrryqM2MVHbOUe6V9Rt
+              66q585l+CrD3DEzesKktHsEfpOqJqo9EzDqiYLtqIFqTaKt29vsoFTm5ggma2NWMGCfPzb5yenpL
+              jylC3nxh+8BXrxkcnVvZUd3MhAVep3RpWKwcNx7dd3YoNd9WU+5hq3d/e49pzVAyzZNEZbyj3tnv
+              vnPT5oCjBpOpQ9fX6D8zfej01IU9php6y9aeY//x9rPDsyu765qqyvweB6eWNFXWucTaf26ayVNB
+              XEkUWwcJVT9Up7sNVXIek4QMEiDHXKyEIp3db19+w8bG2vpEY33i05d3tldEv3tg/BcDqekcefjq
+              nq6W8ura+Ds3t165qo6uxd0vj77ngsa/3NZaXR3fubrhE1d10w0eTudu3tza01W5vD35reuW1pdF
+              D1KVFDM2tVedoNxMSSpqPPDaSH0y9s03n9fekmxvKvvQlT1bzqtDmcKDB0Y/edmS7RtaG+rL//4N
+              S7/3ltXDFBzN5R20bLkvy2LGBS2Vn3nr2saG8i1rmx7/+w2PHhj55StnUcJ47MDoyobkK4MzT780
+              6IeL7QUownn15c2VDiQ5dHbGcjnya0gpIJv/wi+Oepe765M7VjdRQknT7Xc/p6hcsY9iRYziyOzz
+              R8e8nz76w32nj485XVNTuqWqqdKlFWqhE7nOFNX4C3dSK9jrsbFy+7o2SiiZnN/jkcHpDT31nlU+
+              MDSDDM9hpkm4VGewY94XB1LaIWD9AQI+6JUtHhrPfvuKjriBCwTGs+S6n584O5Khv7zxp8fvv7q7
+              76Z1s7li70T2A78yQ6O7j05+/aWR/7puGQWrw/PFO58fRDP59z418J/XL+/78KaTqYWfHJ7YP5o5
+              PJGh0p4U4cXTs7Zn5cxg+vqHDn/7uuU3bWydXSi+fG72xwdH6WZ/+ZkT65uTuz+wcSZb+P2p1H0v
+              DXVWWg6uqKuDYsZYOnfjbwZuvaz745cuoUv2yGvDN/3nftsc6R1N0xnf9cwJVyszp/lNMA6HhmZj
+              hjFfKD7dN2qxuOR2SkSeePHUzQ3lH758+dLGJL1wciJz52O93Y0V77KAdO+51HG667ZOzBbaltZv
+              dx2+P/rjqQeeOozK474HGlP1kYpgupjkD0dGzB7lbUjGfvbcsY81VXzw6vN7miopQ58YSX/hoVdW
+              dtTceJkJpA+cnJgYSkVWt/Sdmabkcmp89tV+NrTpYh8CXGZZoAKyHrv7ZZSsNnUzCGjZLX6H7ewy
+              4p4494KI2CnoQDemMrq0MpYlMESNuHnLBKM35M00i67a+HSBzExaJljESpIoQKI23lkWMb0gcwXT
+              LbYAqDq2vCreTw2CVA4lI1Q7OJRMGyc+XaKKKBU7Y/OF9Ni8ObAYNnUZLixpqipAcWg4YwVisPk4
+              latFt3QVZakM7chY3lI5sVCYptokYhlM+eIjH95aGY9ec/ceR3djpnyVvZp22IXKtgJx9IiQK2kH
+              wqgUqUp0NZTTQVH4Y84igS3aooMpuB7IYqK67Pef3XWR5Xn7Q//EZf/8qzwFtzZBePkbTlofOD16
+              J4CAyaajv2bz1CLpMY0bcnKE9pg1vYi2DZQrOCaOhRXsaIA5EXB9H3YegrM+xPevEF15RNoJXei7
+              96JkjUMrQt1EzNTpA7ecn0crhCG/InGq1/nV7twpFYkTRsDuHpixPcvHajAZTPadBhZLpIAE/QsW
+              wIswe0sHn7cvRhxHE8ZMXUa3NCO9rWgN0jZlFgo3XNrzo7+7sOPO586dTplsx6W9ATdNcPdPzIcC
+              Nj7smFw2dRJvGV19TciDt1524zZT2KTm8xfd/nT/0VFUxodv2Q0zMJ88KiTzgrNoYBG0rXMJ4VLD
+              CFNuAiTTomj/WHQizNzxPD48bNFKNDC9VJMRKJcrMr3pWFw7B3YaihiVcz/xFSQlEU9reASEpcQ+
+              bHn6weDS58Dy2du2V1FOOAXnsAz9P8oUJYhFLl1Rd+vjfedOUXhpcD5GlqWwMklRzj6xZkT52KN1
+              zKTCg0mauy5ZahMK/Xzqkf39VMUkY4qVN7AUwdXskbmMEYa3kWUV8TfIqBbkGeGgXEzwKl5+fS+q
+              sOUK45P1Sq/6CogvjRqSxgAcQyP5EI2btUSE2DIv/QCLmZQAHKuZgtR61k5YIe7YPAXESjgxYcUN
+              S9npAUqhwha80JXZJYzHwk4/IJg5M+YKbALxmvLVrVWUKqlhd6h/wsQ4GImszPK0MF8u2iqUBtZt
+              CvDJMW5VYmT40guTMAVkxxcLUXUaLAaxtCvCi8+gBo5QdAmRyhRzbp6YS1r2E8wMvsKKe0ob68s2
+              CcUjzQBkhFkBrJag+sOvYsUsHytKp7YMnJueP0DBs91ZLMpYP4EJWaUUYlGf+NSlmrtyy3BriBLl
+              UT6QcxL4TERg8xhAX+coIPu6hCoEoEubFhJsiCZZglVnoCb0RST/Q9jpBSjpKAawFVZUH6ofnCC2
+              IOrC43alkY50pA3kREfVQXGsPCuIhToLhiZThC8LIFRagxLyVRWLW2DUh3BmjPBnBgzuVwzcgWcA
+              R4o6Z8aY2wD8w5Vaw0IzSCwXHwxjBiSXVfIqYnjMhrWHlgPsQmEEuvqX6uokoeUpJM3ubbFOHFiz
+              MJBaWKNSz0wClErygt9Pd2ZMR7ghIgqLbaL/j1NHSIKOWKln2ZqXmFdnUCovKTUL0u+PhpA1GUih
+              lVjDF8sQy75xZb0Y0YoCixxrS7side53QMYkBr6sBmHqDIL6GI5cP4ctzgYBUh3U2Ic9wCAUseJy
+              uUGh+wBpioOFmhrCaFnLWkqVD0gvL4mx+VR2oiNoTvAakosWpAR6KQ0bQTj/qa8DUwFQNSzAvI8H
+              M5UcpMJBtgIywEdARmA9ARkasJMm8sE70E9HshMVRWZV9aEhUGrjEnCyiIwkfSTXfHP0DmYOLRvO
+              USD2gLuaD/1z5gZHkl7dQG5L8OIVkFDFSnMOPsCqVRtSiA+p80WOkSqoAQHCXzodqFVtweX/FOU9
+              F2+ayOARaSqsBCQF8L9hzeFzoewEKeXdEJjdElB1DmqCDUAMgjniH5oHNeEFp+z7L29RJYo7Rz1K
+              oONQy0BhCGMFlZdkAPFBluD60OEv82De+8BVj8dBU1DygHg6FUqu2+6IWENREs2uG+jTBwmhDCwp
+              IHH8BlfVWDZXgX89hpe7CRAogYho0iA9Yg+qmiEjbRwUY2c9VOyWEM8dh/RH+lCYoCrBygHVg7L4
+              BCT661gYLBTGgoDiqNh7J4yugqXK+aaseKasDazkIQg91YE10Iko0DVCjrGCVYVrcTDuDQ5lQNib
+              PwJFFPDmzuI+WKQbZUn6gMrHCjDLrIWDE4jWe6Wfl8GLTZCkKNZXcA9VczrxSIJEha+YCI+uJfnJ
+              1enRRbICjBXQF7EtQX0I26N4EIeg5ZJOgEv0pwTVWPNeE06cMG8ww/KhZc0CYt9GZHAQCFa9gJzZ
+              cAPWyFWl/CwyF3kXHJCgJcOYqZwOrgvOVQaEqWlWaqV/mT6wnzEJYR4MIcYrazLMF2RT4k/gnQjB
+              hVuFMvGcc7Z0Z7q3cVh4z1hJFMzY+AZHB17dcwSKlyDIYFIGkLKaBoPTU0GONUN1A+bomDsHJXWG
+              g2v24VC2Fa1y0MRdxZA9Ft8aFfpGAoVG1tSWlstgym+NUxorHPdizjctCHftS7O4MkeGXJqoVKSj
+              c/IALm2fUBACkqEEAp7V5CLYEKKAQQcxkBaaluK7xhBk5C3u7SYaEAyLfVyIA2imQUqtG67yuwuA
+              CLDGpRisvHXzIYGcCtxrXljvHHNix3fB+XQlGbYB4RXOXSsURwknKy3WkIEMlLi1Kr0TsJcAolAX
+              wTPW+O/5ajwEcy/5VOZacK1hpMj6VxorujiF/BYQLEgwol8jlnSkUJFQytYLehEXuRqqcBdSAb9S
+              ypeDCoyQMJeD6IsKc1qWVLA0MKaMQ1CO9Dpk4d3OGMkiIoh6QcZB/BN4MVkUoHytgAbylBhoxPp4
+              h/2GbgwKd22I0AaFWzNE9oepY66uLihKE2pfDhtQ7hBEI1osPqhcSQjE7VicIGFFcli1d7epqMup
+              hvv2XIPjM+zmBMnvJQbvTDwrzTBD6ZjLhrRb9l9XbThZZB60cSpluCV3neoxNnEQL2XZkSiGa0p7
+              LxAvYg6SeCMRXWqMgwAM5mXWjE8GdO/65d89Z+cRg/dOEey9SFvtIQWN3QZKXypWKTmlDxNrmwKp
+              TSy8HEV4pTBmpilW2rSO2eUXzBxKTLiUcd4G5oC4mDPGZ0yq8x1VGX5CsApUZQ0R+HnnyHsVJLiH
+              K+WjTCDauYI3mS01Dm4quJ9fjcQGBcFG2B7tZHU7P55By0T1Dg+QXlItix+Q5yJZVCCk9SP9s3an
+              RT/XByEnVd5eH1sqF1XT5PYO26mW/yvAAJE43vnV2LqBAAAAAElFTkSuQmCC">
+              </image>
+              </svg>
 
-        <h2>If that doesn't suit you, go directly to PayPal or VenMo</h2>
-        <div></div>
+          </div></a>
+          <div id="venmo">
 
-        <h2>Still can't find what you need?</h2>
-        <p>You can mail a check.  Please use the contact form for further information.</p>
-        <a href="/home#contact"><button>Contact</button></a>
+          </div>
+        </div>
 
+        <div class="payment-types">
+          <h2>Still can't find what you need?</h2>
+          <p>You can mail a check or possibly make other arrangements.  Please use the contact form for further information.</p>
+          <a href="/home#contact"><button>Contact</button></a>
+        </div>
       </div>
-
-
   </div>
 </section>
