--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -37,15 +37,17 @@
           <button type="submit" id="pay-submit" ><strong>Go to Billing Info</strong></button>
       </form>
       <div id="billing-container" *ngIf="billingReady">
+          <div id="disclaimer"><span>Disclaimer:</span> Both of the payment types below charge a <span>2.9%</span> convenience fee that will be add to you transaction.  If you wish to avoid this fee, use the contact button at the bottom make other arrangments.  Payments still must be on time, and any late fees for rent, etc... will be applied no matter what payment method you use.</div>
+
         <div class="payment-types">
           <h2>Use Google Pay or Apple Pay in your browser</h2>
-          <p>This may have limited support on your browser or phone as it is a new feature not supported by all browsers, as of yet.</p>
-          <div id="stripe-button"><app-stripe  [label]="label" [amount]="amount">Loading...</app-stripe></div>
+          <p>This may have limited support on your browser or phone as it is a new feature.  If you see the button, though, you are good!</p>
+          <div id="stripe-button"><app-stripe  [label]="label" [amount]="stripeAmount">Loading...</app-stripe></div>
         </div>
 
-         <div id="paypal-venmo" class="payment-types">
-          <h2>If that doesn't suit you, go directly to PayPal or VenMo</h2>
-          <a href="https://www.paypal.me/LarryHastings" target="_blank"><div id="paypal">
+         <div id="paypal" class="payment-types">
+          <h2>If that doesn't suit you, go directly to PayPal</h2>
+          <a href="{{paypalUrl}}" target="_blank"><div id="paypal">
               <!-- Generator: Adobe Illustrator 16.0.4, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
               <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
