--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -97,7 +97,7 @@ p{
 }
 #billing-container button{
   display: block;
-  margin: 30px auto 0 auto;
+  margin: 10px auto 0 auto;
   font-size: 1.5em;
   padding: 5px;
   width: 185px;
@@ -110,7 +110,7 @@ p{
 }
 #stripe-button{
   width: 185px;
-  margin: 30px auto 0 auto;
+  margin: 10px auto 0 auto;
   margin-top: 30px;
 }
 .payment-types{
@@ -132,5 +132,8 @@ p{
     margin-right: 15px;
     max-width: 95%;
     min-width: 95%;
+  }
+  h2{
+    font-size: 1.5em;
   }
 }
