--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -37,7 +37,7 @@
           <button type="submit" id="pay-submit" ><strong>Go to Billing Info</strong></button>
       </form>
       <div id="billing-container" *ngIf="billingReady">
-          <div id="disclaimer"><span>Disclaimer:</span> Both of the payment types below charge a <span>2.9%</span> convenience fee that will be add to you transaction.  If you wish to avoid this fee, use the contact button at the bottom to make other arrangments.  Payments still must be on time, and any late fees for rent, etc... will be applied no matter what payment method you use.</div>
+          <div id="disclaimer"><span>Disclaimer:</span> Both of the payment types below charge a <span>2.9%</span> convenience fee that will be added to your transaction.  If you wish to avoid this fee, use the contact button at the bottom to make other arrangments. Payments still must be on time, and any late fees for rent, etc... will be applied no matter what payment method you use.  Please only make one payment request or you may be charged more than once.</div>
 
         <div class="payment-types">
           <h2>Use Google Pay or Apple Pay in your browser</h2>
