--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -7,6 +7,7 @@ h2{
   color: #000;
   text-shadow: none;
   padding: 0 0.5em 0 0.5em;
+  margin-top: 50px;
 }
 #pay-bg{
   position: relative;
@@ -70,23 +71,23 @@ p{
   background-color: #fff;
   cursor: pointer;
 }
-
+#disclaimer{
+  padding: 10px 2em 10px 2em;
+  font-size: 0.9em;
+  color: #000;
+  background-color: #fff;
+}
+#disclaimer span{
+  font-weight: bold;
+}
 #billing-container{
   position: absolute;
   height: 100%;
   width: 100%;
-  background-color: #619b68;
   top: 0px;
   left: 0px;
-}
-#disclaimer{
-  padding: 5px 2em 0 2em;
-  font-size: 0.9em;
-  color: #000;
-}
-#disclaimer span{
-  color: #fff;
-  background-color:
+  margin-bottom: 5px;
+  background-color: green;
 }
 #billing-container p{
   color: #fff;
@@ -97,7 +98,7 @@ p{
 }
 #billing-container button{
   display: block;
-  margin: 10px auto 0 auto;
+  margin: 0 auto 0 auto;
   font-size: 1.5em;
   padding: 5px;
   width: 185px;
@@ -113,16 +114,14 @@ p{
   margin: 10px auto 10px auto;
   margin-top: 30px;
 }
-.payment-types{
-  min-height: 25%;
-  padding-top: 10px;
-}
 #paypal{
-  background-color: lightgray;
+  background-color: #8c8c8c;
+  padding-top: 1px;
+  padding-bottom: 25px;
 }
 #paypal a{
   display: block;
-  margin: 30px auto 0 auto;
+  margin: 0 auto 0 auto;
   width: 185px;
 }
 
@@ -134,5 +133,6 @@ p{
   }
   h2{
     font-size: 1.5em;
+    margin-top: 15px;
   }
 }
