--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -39,7 +39,7 @@
       <div id="billing-container" *ngIf="billingReady">
           <div id="disclaimer"><span>Disclaimer:</span> Both of the payment types below charge a <span>2.9%</span> convenience fee that will be added to your transaction.  If you wish to avoid this fee, use the contact button at the bottom to make other arrangments. Payments still must be on time, and any late fees for rent, etc... will be applied no matter what payment method you use.  Please only make one payment request or you may be charged more than once.</div>
 
-        <div class="payment-types">
+        <div class="bg-grey payment-types">
           <h2>Use Google Pay or Apple Pay in your browser</h2>
           <p>This may have limited support on your browser or phone as it is a new feature.  If you see the button, though, you are good!</p>
           <div id="stripe-button"><app-stripe  [formData]="formData" (paymentResults)="stripeResults($event)">Loading...</app-stripe></div>
@@ -231,7 +231,7 @@
           </div>
         </div>
 
-        <div class="payment-types">
+        <div class="bg-grey payment-types">
           <h2>Still can't find what you need?</h2>
           <p>You can mail a check or possibly make other arrangements.  Please use the contact form for further information.</p>
           <a href="/home#contact"><button>Contact</button></a>
