--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -47,6 +47,7 @@
 
          <div id="paypal" class="payment-types">
           <h2>If that doesn't suit you, go directly to PayPal</h2>
+          <p>This will take you to the PayPal site where you can complete the payment and I will email you the confirmation.</p>
           <a href="{{paypalUrl}}" target="_blank"><div id="paypal">
               <!-- Generator: Adobe Illustrator 16.0.4, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
               <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
@@ -226,9 +227,7 @@
               </svg>
 
           </div></a>
-          <div id="venmo">
 
-          </div>
         </div>
 
         <div class="bg-grey payment-types">
