--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -135,4 +135,8 @@ p{
     font-size: 1.5em;
     margin-top: 15px;
   }
+  #billing-container p{
+    margin-top: 0px;
+    margin-bottom: 0px;
+  }
 }
