--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -111,8 +111,7 @@ p{
 }
 #stripe-button{
   width: 185px;
-  margin: 10px auto 10px auto;
-  margin-top: 30px;
+  margin: 25px auto 10px auto;
 }
 #paypal{
   background-color: #8c8c8c;
@@ -138,5 +137,8 @@ p{
   #billing-container p{
     margin-top: 0px;
     margin-bottom: 0px;
+  }
+  #stripe-button{
+    margin-top: 0px;
   }
 }
