--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -233,7 +233,7 @@
         <div class="bg-grey payment-types">
           <h2>Still can't find what you need?</h2>
           <p>You can mail a check or possibly make other arrangements.  Please use the contact form for further information.</p>
-          <a href="/home#contact"><button>Contact</button></a>
+          <button><a href="/home#contact">Contact</a></button>
         </div>
       </div>
   </div>
