--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -95,6 +95,7 @@ p{
 }
 #billing-container a{
   text-decoration: none;
+  color: #fff;
 }
 #billing-container button{
   display: block;
@@ -104,11 +105,12 @@ p{
   width: 185px;
   height: 60px;
   background-color: #99badd;
-  color: #fff;
 }
 #billing-container button:hover{
   cursor: pointer;
   background-color: #fff;
+}
+#billing-container button:hover a{
   color: #99badd;
 }
 #stripe-button{
