--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -235,7 +235,7 @@
           <button><a href="/home#contact">Contact</a></button>
         </div>
       </div>
-      <div id="error-message" *ngIf="error">
+      <div id="error-message" class="message" *ngIf="error">
         <p>An error has occured with your payment.  Please try again or use the contact form.</p>
       </div>
       <div id="received-message" *ngIf="received">
