--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -238,7 +238,7 @@
       <div id="error-message" class="message" *ngIf="error">
         <p>An error has occured with your payment.  Please try again or use the contact form.</p>
       </div>
-      <div id="received-message" *ngIf="received">
+      <div id="received-message" class="message" *ngIf="received">
         <p>You payment has been received.  You should receive a confirmation email, to the one supplied, shortly.</p>
       </div>
   </div>
