--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -151,9 +151,8 @@ p{
     font-size: 1.5em;
     margin-top: 15px;
   }
-  #billing-container p{
-    margin-top: 0px;
-    margin-bottom: 0px;
+ p{
+    margin-top: 0.2em;
   }
   #stripe-button{
     margin-top: 0px;
