--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -152,7 +152,9 @@ p{
     margin-top: 15px;
   }
  p{
-    margin-top: 0.2em;
+    padding-top: 0.2em;
+    margin-top: 0px;
+    margin-bottom: 0px;
   }
   #stripe-button{
     margin-top: 0px;
