--- a/src/app/pay/pay.component.css
+++ b/src/app/pay/pay.component.css
@@ -95,6 +95,8 @@ p{
   top: 0px;
   left: 0px;
   margin-bottom: 5px;
+  font-size: 1.5em;
+  padding-top: 2em;
 }
 #error-message{
   background-color: #bf3d3d;
