--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -1,7 +1,7 @@
 <section id="splash-bg">
   <nav>
     <ul>
-      <li><a href="#prices"><img class="icons" src="../../assets/svgs/prices-icon.svg" alt="prices icon"><span>Prices</span></a></li>
+      <li><a [routerLink]="['/home#prices']"><img class="icons" src="../../assets/svgs/prices-icon.svg" alt="prices icon"><span>Prices</span></a></li>
       <li><a href="#pics"><img class="icons" src="../../assets/svgs/pics-icon.svg" alt="prices icon"><span>Pics</span></a></li>
       <li><a href="#contact"><img class="icons" src="../../assets/svgs/contact-icon.svg" alt="prices icon"><span>Contact</span></a></li>
     </ul>
