--- a/src/app/pay/pay.component.html
+++ b/src/app/pay/pay.component.html
@@ -48,7 +48,7 @@
         <div id="paypal" class="payment-types">
           <h2>If that doesn't suit you, go directly to PayPal</h2>
           <p>This will take you to the PayPal site where you can complete the payment and I will email you the confirmation.</p>
-          <a href="{{paypalUrl}}" target="_blank"><div id="paypal">
+          <a href="{{paypalUrl}}" target="_blank" (click)='paypalSubmit(formData)'><div id="paypal">
               <!-- Generator: Adobe Illustrator 16.0.4, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
               <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
               <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
@@ -232,17 +232,18 @@
         <div class="bg-grey payment-types">
           <h2>Still can't find what you need?</h2>
           <p>You can mail a check or possibly make other arrangements.  Please use the contact form for further information.</p>
-          <button><a [routerLink]="['/home#contact']">Contact</a></button>
+          <button><a href='/home#contact'>Contact</a></button>
         </div>
       </div>
       <div id="error-message" class="message" *ngIf="error">
         <p>An error has occured with your payment. Please try again or use the contact form.</p>
-        <button>Try Again</button>
-        <a [routerLink]="['/home#contact']"><button>Contact</button></a>
+        <button (click)="error=true">Try Again</button>
+        <button><a href='/home#contact'>Contact</a></button>
       </div>
       <div id="received-message" class="message" *ngIf="received">
         <p>You payment has been received. You should receive a confirmation email, to the one supplied, shortly.</p>
-        <a [routerLink]="['/home']">Return to Home Page</a>
+        <p>If you used paypal, you must complete the process on that end before you receive the confirmation.</p>
+        <button><a href='/home'>Back to Home Page</a></button>
       </div>
   </div>
 </section>
