--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -10,5 +10,5 @@
   <h1>Cottage on Blair</h1>
   <div id="pay-online"><a [routerLink]="['/pay']">Online Payments</a></div>
 
-  <a href="#prices"><div id="scroller"></div></a>
+  <div (click)='scrollDown()' id="scroller"></div>
 </section>
